[gd_scene load_steps=4 format=3 uid="uid://dvt7nxmmlpgj1"]

[ext_resource type="Script" uid="uid://bwufogva0b7k2" path="res://src/scene/ui/main_ui.gd" id="1_mwyax"]
[ext_resource type="Texture2D" uid="uid://2oex5v24xh6s" path="res://resources/texture/fancy_icon.png" id="2_uam0p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s148x"]
bg_color = Color(0.0119504, 0.0240317, 0.029347, 1)

[node name="main_ui" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_mwyax")
window_minimum_size = Vector2(256, 64)
custom_loading_screen_scene_path = "res://src/scene/ui/modular_ui/omni_loading_screen.tscn"

[node name="back_panel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s148x")

[node name="h_split" type="HSplitContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="v_split" type="VSplitContainer" parent="h_split"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 0

[node name="icon" type="TextureRect" parent="."]
self_modulate = Color(0.666667, 0.901961, 0.921569, 0.690196)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_uam0p")
stretch_mode = 3

[node name="console_margin" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="raw_console" type="RichTextLabel" parent="console_margin"]
self_modulate = Color(0.8, 0.929412, 0.941176, 0.945098)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
bbcode_enabled = true
scroll_following = true
