[gd_scene load_steps=4 format=3 uid="uid://cd0lil87h3vjv"]

[ext_resource type="Script" uid="uid://bwufogva0b7k2" path="res://src/scene/ui/main_ui.gd" id="1_ej631"]
[ext_resource type="PackedScene" uid="uid://xu87r8s00jp5" path="res://src/scene/ui/app_element_ui/omni_file_browser_ui.tscn" id="2_y5etf"]
[ext_resource type="PackedScene" uid="uid://d3ffxjiwggxht" path="res://src/scene/ui/app_element_ui/omni_console_ui.tscn" id="3_gfkfm"]

[node name="app_ui" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_ej631")

[node name="h_split" type="HBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="v_split" type="VBoxContainer" parent="h_split"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 0

[node name="file_browser" parent="h_split/v_split" instance=ExtResource("2_y5etf")]
layout_mode = 2
size_flags_vertical = 3

[node name="console" parent="h_split/v_split" instance=ExtResource("3_gfkfm")]
layout_mode = 2
size_flags_vertical = 3
